# ollama-cli

./: install.sh  ollama-cli.py  pyproject.toml
docs/: design-subagents.md
src/ollama_cli/: main.py
src/ollama_cli.egg-info/: SOURCES.txt
src/ollama_cli/agents/: __main__.py  mailbox.py  planner.py  react.py  worker.py
src/ollama_cli/core/: config.py  ollama.py  sessions.py
src/ollama_cli/tools/: execution.py  media.py  web.py
src/ollama_cli/ui/: repl.py
tests/: test_mailbox.py  test_planner.py  test_react.py  test_worker.py
